--- a/react-advanced/src/index.css
+++ b/react-advanced/src/index.css
@@ -19,11 +19,11 @@
 
 body {
   /* background-color: #343131; */
-  color: white;
+  /* color: white; */
 }
 
 .recipe-img{
-  width: 125px;
+  width: 175px;
   height: auto;
 }
 
